# direct_visual_lidar_calibration

./: CMakeLists.txt
include/: nanoflann.hpp
include/camera/: atan.hpp  create_camera.hpp  equirectangular.hpp  fisheye.hpp  generic_camera.hpp  generic_camera_base.hpp  omnidir.hpp  pinhole.hpp  traits.hpp
include/dfo/: directional_direct_search.hpp  nelder_mead.hpp  optimizer.hpp
include/test/: detect_sphere.hpp
include/test/calib/: cost_calculator_edge.hpp  cost_scaller.hpp  edge_extraction.hpp  line_fitting.hpp  nearest_neighbor_search.hpp
include/vlcal/calib/: cost_calculator.hpp  cost_calculator_nid.hpp  view_culling.hpp  visual_camera_calibration.hpp
include/vlcal/common/: cloud_covariance_estimation.hpp  concurrent_queue.hpp  console_colors.hpp  estimate_fov.hpp  estimate_pose.hpp  frame.hpp  frame_cpu.hpp  frame_traits.hpp  integrated_ct_gicp_factor.hpp  integrated_ct_gicp_factor_impl.hpp  integrated_ct_icp_factor.hpp  integrated_ct_icp_factor_impl.hpp  ivox.hpp  kdtree2.hpp  nearest_neighbor_search.hpp  raw_points.hpp  ros_cloud_converter.hpp  statistical_median_filter.hpp  time_keeper.hpp  vector3i_hash.hpp  visual_lidar_data.hpp
include/vlcal/costs/: nid_cost.hpp  reprojection_cost.hpp
include/vlcal/preprocess/: dynamic_point_cloud_integrator.hpp  generate_lidar_image.hpp  (+3 more)
src/: calibrate_lidar.cpp  initial_guess_auto.cpp  initial_guess_manual.cpp  preprocess_map.cpp  preprocess_ros1.cpp  preprocess_ros2.cpp  viewer.cpp
src/camera/: create_camera.cpp
src/test/: detect_sphere.cpp  normalization.cpp  outliers.cpp  reference.cpp  vis.cpp
(+19 files in other folders)
